2014-03-17  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define ">>" constructor.

2014-03-08  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define ">" constructor.

2014-02-23  Per Bothner  <per@bothner.com>

	* Shell.java (openFile): New method, use openHeuristicFile.
	(runFile): Use openFile.
	* repl.java: Likewise.

2014-02-18  Jamison Hope  <jrh@theptrgroup.com>

	* standard/Scheme.java (initScheme): Remove 'logbit?', since it
	just an alias for 'bitwise-bit-set?' and happens to conflict with
	the semantics of SRFI-60 'logbit?'.
	* standard/ImportFromLibrary.java (SRFI97Map): Update for SRFI-60.
	* standard/require.java (featureMap): Likewise.

2014-02-17  Per Bothner  <per@bothner.com>

	* standard/define.java: Implement 'define-early-constant'.
	* standard/Scheme.java (initScheme): Define 'define-early-constant'.

2014-02-17  Jamison Hope  <jrh@theptrgroup.com>

	* standard/ImportFromLibrary.java (SRFI97Map): Update for SRFI-87
	and SRFI-98 which are now builtins.

2014-02-17  Per Bothner  <per@bothner.com>

	* Shell.java: Add ExitCalled support.
	* repl.java: Likewise.
	* standard/Scheme.java (initScheme): Define 'emergency-exit'.

2014-02-16  Per Bothner  <per@bothner.com>

	* lang/Translator.java: Make sure Error is uncaught or re-thrown.
	* standard/Scheme.java: Likewise.
	* standard/constant_fold.java: Likewise.
	* standard/load.java: Likewise.
	* standard/require.java: Likewise.

	* lang/AutoloadProcedure.java: Simplify as we now require Java5.

2014-02-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'pipe-process'.

2014-02-06  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'current-path'.

2014-01-02  Per Bothner  <per@bothner.com>

	* repl.java: Update year to 2014.

	* standard/Scheme.java (initScheme): Remove 'simple-guard',
	since re-implemented 'guard' is (almost) equally simple.

2013-12-22  Per Bothner  <per@bothner.com>
